--- a/style.css
+++ b/style.css
@@ -1088,3 +1088,79 @@ body {
   visibility: visible; /* Tampilkan teks saat hover */
   opacity: 1;
 }
+
+/*pelatihan*/
+#certification-section {
+  text-align: center;
+  margin-top: 50px;
+}
+
+.judol-title {
+  font-size: 2rem;
+  margin-bottom: 40px;
+  color: rgb(211, 3, 3);
+  text-shadow: 0 0 10px rgb(211, 3, 3);
+}
+
+.certification-container {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+
+.certification-card {
+  position: relative;
+  border: 2px solid #ddd;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  transition: transform 0.3s ease;
+  width: auto; /* Membiarkan lebar otomatis sesuai gambar */
+}
+
+.certification-card:hover {
+  transform: scale(1.05);
+}
+
+.certification-image {
+  width: 100%;
+  height: auto; /* Menyesuaikan tinggi dengan proporsi gambar */
+  overflow: hidden;
+  position: relative;
+}
+
+.certification-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Gambar akan menyesuaikan dan memotong jika diperlukan */
+}
+
+.certification-info {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: transparent;
+  text-align: center;
+  opacity: 0;
+  background-color: rgba(0, 0, 0, 0.5); /* Background hitam dengan transparansi */
+  padding: 20px;
+  border-radius: 8px;
+  transition: opacity 0.3s ease, color 0.3s ease, background-color 0.3s ease;
+}
+
+.certification-card:hover .certification-info {
+  opacity: 1;
+  color: #fff;
+  background-color: rgba(0, 0, 0, 0.8); /* Background menjadi lebih gelap saat hover */
+}
+
+.certification-info h3 {
+  font-size: 1.2rem;
+  margin-bottom: 10px;
+}
+
+.certification-info p {
+  font-size: 1rem;
+}
